<resources>
    <string name="app_name">MeetAndPlay</string>
    <string name="login_label">Login</string>
    <string name="login_hint">Input your login</string>
    <string name="password_label">Password</string>
    <string name="repeat_password_label">Repeat password</string>
    <string name="repeat_password_hint">Input your password to confirm</string>
    <string name="password_hint">Input your password</string>
    <string name="login_button_label">Log In</string>
    <string name="user_not_registered_label">You don`t have an account?</string>
    <string name="register_button_label">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_menu_Profile_label">Profile</string>
    <string name="bottom_menu_list_label">List</string>
    <string name="bottom_menu_messagging_label">Messages</string>
    <string name="bottom_menu_logout_label">Messages</string>
    <string name="profile_description_default">There is no description, yet do you want to add one?</string>
    <string name="profile_edit_username_hint">UserName</string>
    <string name="profile_edit_details_address_hint">Address</string>
    <string name="profile_edit_details_email_hint">E-mail</string>
    <string name="profile_edit_details_phone_hint">Phone:</string>
    <string name="profile_edit_save_changes_button">Save Changes</string>
</resources>