<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="150dp"
        android:layout_marginTop="25dp"
        android:layout_height="150dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/login_label"
        android:textAllCaps="true"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/register_view_login_user_input"
        android:layout_width="wrap_content"
        android:hint="@string/login_hint"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/password_label"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/register_view_password_user_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/repeat_password_label"
        android:textAllCaps="true"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/register_view_repeat_password_user_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_password_hint"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:text="@string/register_button_label"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"/>

</LinearLayout>