<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.UserProfile.UserProfileFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_edit_image"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:src="@drawable/ic_baseline_add_a_photo_64"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/CircularImage" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/profile_edit_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="32dp"
        android:hint="@string/profile_edit_username_hint"
        android:textSize="36sp"
        tools:layout_editor_absoluteX="242dp"
        app:layout_constraintStart_toEndOf="@id/profile_edit_image"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/profile_edit_description"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_height="128dp"
        android:hint="@string/profile_description_default"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/profile_edit_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/profile_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/profile_edit_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_edit_details_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_edit_details_address_hint"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_edit_details_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_edit_details_email_hint"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_edit_details_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_edit_details_phone_hint"
            android:textSize="16sp" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/profile_fragment_PLACEHOLDER"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/profile_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile_edit_save_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/profile_edit_save_changes_button"
        android:gravity="center"
        app:icon="@drawable/ic_baseline_check_24"
        app:iconGravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearance="@style/CircularImage" />

</androidx.constraintlayout.widget.ConstraintLayout>